Fix font rendering issue on iOS.

--- a/app/static/styles/global.css
+++ b/app/static/styles/global.css
@@ -24,7 +24,7 @@ main {
 	h1 {
 		margin: 2.5rem auto 0;
 		text-align: center;
-		font: italic 700 5rem/1.2 "Didot", sans-serif;
+		font: italic normal 700 5rem/1.2 "Didot", sans-serif;
 	}
 }
 
